# Final-Project

./: .env.example  .gitignore  Project details.md  README.md  main.py  pyproject.toml  requirements.txt
backend_api/: __init__.py  database.py  main.py  models.py  provider.py  schemas.py  state.py
backend_api/routers/: ats.py  chat.py  health.py  interview.py  jobs.py  resume.py  tracker.py
frontend/: ATS.html  Analytics.html  Application Tracker.html  CWR.html  Interview_report.html  JS.html  MI.html  api-client.js  main.html  package-lock.json
frontend/src/: App.js
functions/ats/: scorer.py
functions/chat/: rag_engine.py
functions/common/: llama_cpp_client.py
functions/interview/: engine.py  interviewer.py
functions/job_portal/: search.py
functions/resume_parsing/: ai_extractor.py  ai_extractor_gemini.py  ai_extractor_llamacpp.py  parser.py
resume_parser/: __init__.py  ai_extractor.py  ai_extractor_gemini.py  ats_scorer.py  models.py  parser.py
tests/: README.MD  verify_parser.py  verify_rag_refactor.py
