[project]
name = "ai-job-assistant"
version = "0.1.0"
description = "AI-powered job assistance platform for resume analysis and job search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=4.0.0",
    "python-dotenv>=1.0.1",
    "google-generativeai>=0.8.0",
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "ollama>=0.1.0",
    "pydantic>=2.0.0",
    "pdfplumber>=0.10.0",
    "pytz>=2025.2",
    "json-repair>=0.55.1",
    "requests>=2.32.5",
    "dotenv>=0.9.9",
    "plotly>=5.18.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
]
